--- a/CoreSync.Entity.Client/CoreSync.Entity.Client.csproj
+++ b/CoreSync.Entity.Client/CoreSync.Entity.Client.csproj
@@ -8,6 +8,9 @@
     <Description>This provides a client side implementation of a versionned entity</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Version>1.0</Version>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageOutputPath>..\nuget</PackageOutputPath>
+    <PackageProjectUrl>https://github.com/sebastiencambon/CoreSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
