--- a/CoreSync.API/CoreSync.API.csproj
+++ b/CoreSync.API/CoreSync.API.csproj
@@ -9,7 +9,10 @@
     <Description>This provides server side implementations of data access services for API use.
 It also provides an abstraction to API controllers which encapsulate base services, conflict management and regirstration to the IoC.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Version>2.1</Version>
+    <Version>1.0</Version>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageOutputPath>..\nuget</PackageOutputPath>
+    <PackageProjectUrl>https://github.com/sebastiencambon/CoreSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
