--- a/CoreSync.Entity.Abstractions.EF/CoreSync.Entity.Abstractions.EF.csproj
+++ b/CoreSync.Entity.Abstractions.EF/CoreSync.Entity.Abstractions.EF.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
     <Version>1.0</Version>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageOutputPath>..\nuget</PackageOutputPath>
+    <PackageProjectUrl>https://github.com/sebastiencambon/CoreSync</PackageProjectUrl>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Sébastien Cambon</Authors>
     <Description>This provides an abstraction layer for EntityFramework use and tracking changes interfaces
 </Description>
-    <PackageTags>EntityFramework</PackageTags>
+    <PackageTags>EntityFramework</PackageTags><PackageProjectUrl>https://github.com/sebastiencambon/CoreSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
