Remove Autofac from mobile dependencies Add Swagger in sample Refactoring

--- a/CrossSync.AspNetCore/CrossSync.AspNetCore.csproj
+++ b/CrossSync.AspNetCore/CrossSync.AspNetCore.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>CrossSync.API</AssemblyName>
-    <RootNamespace>CrossSync.API</RootNamespace>
+    <AssemblyName>CrossSync.AspNetCore</AssemblyName>
+    <RootNamespace>CrossSync.AspNetCore</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Sébastien Cambon</Authors>
     <Description>This provides server side implementations of data access services for API use.
