--- a/CrossSync.Entity.Client/CrossSync.Entity.Client.csproj
+++ b/CrossSync.Entity.Client/CrossSync.Entity.Client.csproj
@@ -10,7 +10,7 @@
     <Version>1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageOutputPath>..\nuget</PackageOutputPath>
-    <PackageProjectUrl>https://github.com/sebastiencambon/CrossSync</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/sebcam/CrossSync</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
