--- a/CrossSync.Xamarin.Mvvm/CrossSync.Xamarin.Mvvm.csproj
+++ b/CrossSync.Xamarin.Mvvm/CrossSync.Xamarin.Mvvm.csproj
@@ -16,10 +16,11 @@
     </Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 
-    <Version>1.0</Version>
+    <Version>0.1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageOutputPath>..\nuget</PackageOutputPath>
-    <PackageProjectUrl>https://github.com/sebastiencambon/CrossSync</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/sebcam/CrossSync</PackageProjectUrl>
+    <PackageTags>CrossSync CrossPlatform ViewModel MVVM Navigation Xamarin.Forms Forms Entity EntityFramework EntityFrameworkCore AspNetCore API Sync Synchronization Mobile Xamarin Offline Database Services UnitOfWork Repository</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
