--- a/CrossSync.Entity.Client/CrossSync.Entity.Client.csproj
+++ b/CrossSync.Entity.Client/CrossSync.Entity.Client.csproj
@@ -7,10 +7,12 @@
     <Authors>Sébastien Cambon</Authors>
     <Description>This provides a client side implementation of a versionned entity</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Version>1.0</Version>
+    <Version>0.1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageOutputPath>..\nuget</PackageOutputPath>
     <PackageProjectUrl>https://github.com/sebcam/CrossSync</PackageProjectUrl>
+
+    <PackageTags>CrossSync Entity EntityFramework EntityFrameworkCore AspNetCore API Sync Synchronization Mobile Xamarin Offline Database Services UnitOfWork Repository</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
