--- a/CrossSync.Xamarin.DependencyInjection/CrossSync.Xamarin.DependencyInjection.csproj
+++ b/CrossSync.Xamarin.DependencyInjection/CrossSync.Xamarin.DependencyInjection.csproj
@@ -2,17 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>CrossSync.Xamarin.Dependency</AssemblyName>
-    <RootNamespace>CrossSync.Xamarin.Dependency</RootNamespace>
+    <AssemblyName>CrossSync.Xamarin.DependencyInjection</AssemblyName>
+    <RootNamespace>CrossSync.Xamarin.DependencyInjection</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Sébastien Cambon</Authors>
     <Description>This provides a client side tools for Dependency Injection</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 
-    <Version>1.0</Version>
+    <Version>0.1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageOutputPath>..\nuget</PackageOutputPath>
-    <PackageProjectUrl>https://github.com/sebastiencambon/CrossSync</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/sebcam/CrossSync</PackageProjectUrl>
+    <PackageTags>CrossSync Entity EntityFramework EntityFrameworkCore AspNetCore API Sync Synchronization Mobile Xamarin Offline Database Services UnitOfWork Repository</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
