--- a/CrossSync.Xamarin/CrossSync.Xamarin.csproj
+++ b/CrossSync.Xamarin/CrossSync.Xamarin.csproj
@@ -9,20 +9,19 @@
     <Description>This provides services to handle Client/Server synchronization and conflict resolution.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 
-    <Version>1.0</Version>
+    <Version>0.1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageOutputPath>..\nuget</PackageOutputPath>
-    <PackageProjectUrl>https://github.com/sebastiencambon/CrossSync</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/sebcam/CrossSync</PackageProjectUrl>
+    <PackageTags>CrossSync Entity EntityFramework EntityFrameworkCore AspNetCore API Sync Synchronization Mobile Xamarin Offline Database Services UnitOfWork Repository</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CrossSync.Infrastructure.Client\CrossSync.Infrastructure.Client.csproj" />
-    <ProjectReference Include="..\CrossSync.Xamarin.DependencyInjection\CrossSync.Xamarin.DependencyInjection.csproj" />
   </ItemGroup>
 
 </Project>
