--- a/CrossSync.Xamarin/CrossSync.Xamarin.csproj
+++ b/CrossSync.Xamarin/CrossSync.Xamarin.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
 
   <ItemGroup>
